--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Top nav bar */
+.nav {
+  height: 80px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* The rest of the content */
+.content {
+  margin-top: 80px;
+  height: calc(100vh - 80px);
+}
+
+/* Scrollable chat area */
+.chatarea {
+  height: calc(100vh - 80px);
+  max-height: calc(100vh - 80px);
 }
