--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 /* Top nav bar */
 .nav {
   height: 80px;
@@ -14,7 +10,7 @@
 }
 
 /* Scrollable chat area */
-.chatarea {
+.chat {
   height: calc(100vh - 80px);
   max-height: calc(100vh - 80px);
 }
