--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,17 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Mukta', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Zen Antique", serif;
+}
 /* Top nav bar */
 .nav {
   height: 80px;
