--- a/client/src/pages/Login.module.css
+++ b/client/src/pages/Login.module.css
@@ -53,6 +53,7 @@
 .button {
   min-width: 150px;
   padding: 1rem 2.5rem;
+  font-family: 'Mukta', sans-serif;
   font-size: 1.3rem;
   background-color: #37da60;
   outline: none;
