--- a/client/src/components/Sidebar.module.css
+++ b/client/src/components/Sidebar.module.css
@@ -1,13 +1,26 @@
 .sidebarWrapper {
-  max-width: 350px;
-  width: 100%;
-  padding: 2rem;
-  background-color: #379eda;
+	max-width: 350px;
+	width: 100%;
+	padding: 2rem;
+	background-color: #379eda;
 }
 
-.user {
-  padding: 1rem;
-  margin-bottom: 1rem;
-  background-color: #64b7e7;
-  border-radius: 0.5rem;
+.user,
+.userOnline {
+	padding: 1rem;
+	margin-bottom: 1rem;
+	background-color: #64b7e7;
+	border-radius: 0.5rem;
+	position: relative;
+}
+
+.userOnline::after {
+	content: "";
+	position: absolute;
+  bottom: 1.7rem;
+	right: 0.7rem;
+	width: 7px;
+	height: 7px;
+	border-radius: 50%;
+	background-color: #82e79c;
 }
